--- a/tasks/06_install_argocd.yml
+++ b/tasks/06_install_argocd.yml
@@ -48,7 +48,7 @@
       mode: 0660
       owner: "{{install.os.non_root_user.name}}"
       group: "{{install.os.non_root_user.name}}"
-#      force: no    
+      force: no                                       # Do not overwrite exisitng files in repo (might force old versions)
     with_filetree: "../templates/argocd/git_repo"
     when: item.state == "file"
 
