--- a/templates/argocd/git_repo/workloads/renovate/values.yaml
+++ b/templates/argocd/git_repo/workloads/renovate/values.yaml
@@ -1,8 +1,7 @@
 renovate:
   enabled: true
   cronjob:
-    # At 01:00 every day
-    schedule: '0 1 * * *'
+    schedule: '{{install.renovate.schedule}}'
 
   renovate:
     # See https://docs.renovatebot.com/self-hosted-configuration
