--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -129,3 +129,10 @@ install:
       # inventory, host_var or group_var file. This must be set to an IP range or CIDR range.
       # This will define the pool of IP addresses to hand out to serviced of type LoadBalancer.
       enabled: true
+ 
+  ###[ Cert Manager Installation Settings ]########################################################
+  cert_manager:
+    # Select release to use:  https://github.com/cert-manager/cert-manager/releases
+    install_version: "{{cert_manager_install_version|default('v1.7.1')}}"
+
+    namespace: "cert-manager"
