--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -131,7 +131,7 @@ install:
       enabled: true
 
       # Select release to use: https://github.com/kube-vip/kube-vip-cloud-provider/releases
-      install_version: "{{kube_vip_cloud_provider_install_version|default('v0.0.2')}}
+      install_version: "{{kube_vip_cloud_provider_install_version|default('v0.0.2')}}"
 
   ###[ Cert Manager Installation Settings ]########################################################
   cert_manager:
