--- a/vars/main.yml
+++ b/vars/main.yml
@@ -91,8 +91,8 @@ containerd:
 
     zfs_uuid_detect_cmd: "zfs list -o name | grep -E -o '{{install.containerd.zfs.pool}}/{{install.containerd.zfs.dataset_prefix}}{{install.containerd.zfs.uuid}}[^/]*{6}$' | rev | cut -c 1-6 | rev"
 
-###[ Cert-manager Installation Settings ]##########################################################
-cert_manager:
+###[ Let's Encrypt Configuration Settings ]########################################################
+lets_encrypt:
 
   le_staging_server: "https://acme-staging-v02.api.letsencrypt.org/directory"
   le_production_server: "https://acme-v02.api.letsencrypt.org/directory" 
