--- a/tasks/06_install_argocd.yml
+++ b/tasks/06_install_argocd.yml
@@ -112,6 +112,29 @@
   - name: Check-in Any New or Modified Files
     include_tasks: "checkin_argocd_repo_files.yml"
 
+  # Let Helm know not to manage ArgoCD anymore
+#  - name: Remove ArgoCD secrets from Helm
+#    kubernetes.core.k8s:
+#      state: absent
+#      definition:
+#        api_version: v1
+#        kind: Secrets
+#        namespace: "{{install.argocd.namespace}}"
+#        metadata:
+#          labels:
+#            owner: helm
+#            name: argocd
+  - name: Remove ArgoCD secrets from Helm
+    ansible.builtin.command:
+      argv:
+        - /usr/local/bin/kubectl
+        - delete
+        - secret
+        - -l
+        - owner=helm,name=argo-cd
+        - -n
+        - "{{install.argocd.namespace}}"
+
   when: 
     - inventory_hostname == groups['k3s_control'][0]
     - install.argocd.enabled|default(false)|bool == true
