--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -87,6 +87,7 @@ install:
       username: "{{ARGOCD_REPO_USERNAME_SECRET|default('oauth')}}"                           # oauth - not really used
       password: "{{ARGOCD_REPO_PASSWORD_SECRET|default('UNDEFINED_REPO_PASSWORD_TOKEN')}}"   # Github Personal Access Token
 
+    # Default Dashboard URL:  https://k3s.{{ansible_domain}}/argocd/
     dashboard:
       path: "/argocd"                         # URI Path for Ingress Route
 
