Updated kube-vip and cloud provider docs

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -130,8 +130,9 @@ install:
 
   ###[ Kube-VIP Configuration Settings ]###########################################################
   # Kube-VIP provides HA Load Balancer for the API service and optionally LoadBalancer services
-  # It can optionally also provide Load Balancer services a pool of address to use instead of
-  # using MetalLB.  When enabled this will disable k3s built-in Klipper Load Balancer.
+  # It can optionally also provide Load Balancer services if you specify "loadBalancerIP: x.y.z.a"
+  # in the LoadBalancer Service spec.
+  # When enabled this will disable k3s built-in Klipper Load Balancer.
   kube_vip:
     # When enabled, you must define variable "vip_endpoint_ip" at host or group level within 
     # inventory, host_var or group_var file. This must be set to an IP address. This IP address will
@@ -142,11 +143,8 @@ install:
     # Select release to use: https://github.com/kube-vip/kube-vip/releases
     install_version: "{{kube_vip_install_version|default('v0.4.4')}}"
 
-    # To use Kube-VIP Cloud Provider as LoadBalancer instead of MetalLB
+    # To use Kube-VIP Cloud Provider to enable using an address pool with Kube-VIP
     lb:
-      # When enabled, this will disable k3s built-in Klipper Load Balancer and enable kube-vip
-      # Cloud Provider Load Balancer instead.
-
       # When enabled, you must define variable "vip_lb_ip_range" at host or group level within 
       # inventory, host_var or group_var file. This must be set to an IP range or CIDR range.
       # This will define the pool of IP addresses to hand out to serviced of type LoadBalancer.
