Set tags to always, always run when called.

--- a/tasks/process_app_to_deploy.yml
+++ b/tasks/process_app_to_deploy.yml
@@ -56,7 +56,5 @@
   when: 
     - inventory_hostname == groups['k3s_control'][0]
   tags:
-    - install_argocd
-    - deploy_apps
-    - config_le_certificates
+    - always
 
